# ConvertKeylogApp

./: .gitignore  LICENSE  PROJECT_DESCRIPTION.md  README.md  USAGE_GUIDE_VI.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_coordinate_plotting.py  test_derivative_comprehensive.py  test_derivative_encoding.py  test_excel_chunk_export.py  test_excel_full.py  test_geometry_v2.py  test_integral_encoding.py  test_polynomial_encoding.py
api/: README.md  __init__.py  main.py  models.py  requirements.txt
api/routers/: equation.py  geometry.py  polynomial.py  system.py
app/: __init__.py  config.py  main.py
config/: app_config.json  converter_mappings.json  file_templates.json  modes.json  ui_settings.json  validation_rules.json
config/common/: math_symbols.json
config/equation/: excel_mapping.json  keylog_mapping.json  math_replacements.json  prefixes.json
config/equation_mode/: equation_excel_mapping.json  mapping.json
config/geometry/: excel_mapping.json  operations.json
config/geometry_v2_mode/: excel_column_mapping.json  expression_encoding.json  geometry_v2_excel_mapping.json  geometry_v2_mapping.json  geometry_v2_operations.json  geometry_v2_shapes.json  operation_codes.json  shape_codes.json
config/polynomial/: excel_mapping.json  operations.json
config/polynomial_mode/: polynomial_mapping.json  polynomial_prefixes.json
config/vector_mode/: vector_mappings.json
core/: __init__.py
core/converters/: __init__.py  base_converter.py  equation_converter.py  geometry_converter.py  keylog_converter.py
core/models/: conversion_result.py  file_metadata.py  keylog_model.py
core/processors/: __init__.py  csv_processor.py  excel_processor.py  json_processor.py  validator.py
docs/: POLYNOMIAL_ENCODING_GUIDE.md  PROJECT_DESCRIPTION.md  README.md  USAGE_GUIDE_VI.md  changelog.md  developer_guide.md  equation_refactoring.md  geometry_refactoring.md  mermaid class diagram.txt  mermaid workflow.txt  project-description.md  user-guide.md  user_guide.md  warning.txt
gui/: __init__.py
gui/components/: __init__.py  base_window.py  file_selector.py  progress_bar.py  result_display.py  status_bar.py
gui/styles/: __init__.py  colors.py  dark_theme.py  default_theme.py
gui/windows/: __init__.py  about_window.py  converter_window.py  equation_window.py  geometry_window.py  main_window.py  main_window_tl_style.py  polynomial_window.py  settings_window.py
resources/icons/: .gitkeep
resources/templates/: .gitkeep
services/: __init__.py  derivative_service.py  integral_service.py
services/derivative/: __init__.py  derivative_encoding_service.py  excel_service.py
services/equation/: __init__.py  equation_batch_processor.py  equation_encoding_service.py  equation_service.py  mapping_manager.py  prefix_resolver.py
services/excel/: __init__.py  debug_backslash.py  excel_processor.py  large_file_processor.py
services/geometry/: __init__.py  geometry_service.py  mapping_adapter.py
services/geometry_v2/: __init__.py  excel_processor.py  geometry_encoder.py  geometry_v2_service.py
services/integral/: excel_service.py  integral_calculator.py  integral_encoding_service.py
services/polynomial/: __init__.py  polynomial_encoding_service.py  polynomial_excel_processor.py  polynomial_service.py  polynomial_solver.py  polynomial_template_generator.py
tests/: __init__.py
utils/: __init__.py  exceptions.py  file_utils.py  latex_to_keylog.py  logger.py  math_utils.py  string_utils.py
views/: __init__.py  derivative_view.py  equation_view.py  equation_view_v2.py  geometry_v2_view.py  geometry_view.py  geometry_view_v2.py  integral_view.py  main_view.py  polynomial_equation_view.py  polynomial_excel_ui.py  vector_view.py
(+53 files in other folders)
